src/style/style.scss
@import "./const.scss";
@import "./mixin.scss";
@import "./animation.scss";

.#{$class-prefix} {

    /**
    * 动作提示
    */
    &-action-toast {
        @include absolute-center;
        padding: 10px 15px;
        font-size: 18px;
        color: whitesmoke;
        background-color: rgba(0, 0, 0, 0.555);
        z-index: var($max-7-z-index);
    }

    &-action-toast-animation {
        animation: toast-show 1.2s alternate forwards;
    }

    /**
    * 关灯影院模式
    */
    &-movie-mode {
        @include player-z-index;
    }

    &-movie-mode-parent {
        z-index: auto !important;
    }

    &-movie-mode-modal {
        @include fixed-full;
        background: rgba(0, 0, 0, 0.9);
        z-index: var($max-5-z-index);
    }

    /**
    * 视频镜像
    */
    &-mirror video {
        transform: rotateX(0deg) rotateY(180deg);
    }
}

